fixed css so that both checklist sections are aligned next to each other, working on fixing alignment of checkboxes

--- a/src/components/Checklist/Checklist.css
+++ b/src/components/Checklist/Checklist.css
@@ -1,6 +1,7 @@
 .checkList {
     padding-bottom: 20px;
-    font-size: 18px
+    font-size: 18px;
+    width: 400px;
 }
 
 .resetButton {
